--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -6,8 +6,10 @@
  <span *ngIf="i<15" class="col-lg-3 col-xl-3 col-md-3 col-sm-6">
 <!--<a href="javascript:void(0)" ><span class="moviesTitle" (click)="video(data.contentDetails.upload.videoId)">{{data.snippet.title}}</span></a>-->
   <span>
-     <a href="javascript:void(0)" ><img class="movieImage"[src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.medium.height"/><br>
-
+     <a href="javascript:void(0)" ><img class="movieImage"[src]="data.snippet.thumbnails.medium.url" alt="Image not found"  width="268" height="data.snippet.thumbnails.medium.height"/><br>
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)">
+            <span class="insidePlayButton"></span>
+        </button>
     </a>
     <hr/>
   </span>
