--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -21,17 +21,17 @@
 
 
 
+<app-pop-up-model></app-pop-up-model>
 
-<!-- Pop up youtube model -->
-<div *ngIf="showModel" id="myModal" class="modal">
+<!--<div *ngIf="showModel" id="myModal" class="modal">
 
-  &lt;!&ndash; Modal content &ndash;&gt;
+
   <div class="modal-content">
     <span (click)="close()" class="close" title="Close">&times;</span>
 
     <iframe width="100%" height="100%" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
-</div>
+</div>-->
 
 
