--- a/src/app/pop-up-model/pop-up-model.component.html
+++ b/src/app/pop-up-model/pop-up-model.component.html
@@ -1,14 +1,10 @@
-<!-- Trigger/Open The Modal -->
-<button id="myBtn" (click)="launchVideo()">Watch Now</button>
-
-<!-- The Modal -->
 <div *ngIf="showModel" id="myModal" class="modal">
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span (click)="close()" class="close">&times;</span>
 
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/EPzM92gZMO4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="modal-content">
+    <span (click)="close()" aria-hidden="true" class="close" title="Close Video">&times;</span>
+
+    <iframe width="100%" height="100%" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
 </div>
