--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -131,8 +131,8 @@ This page is under construction
     <span *ngIf="i<1">
       <a href="javascript:void(0)">
       <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-       <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton playButtonAdjustment">
+       <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found"  height="data.snippet.thumbnails.small.height"/></a>
+        <button class="playButton playButtonAdjustment" (click)="video(data.snippet.resourceId.videoId)">
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -151,7 +151,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" style="overflow:hidden;" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
       <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton playButtonAdjustment">
+        <button class="playButton playButtonAdjustment" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
   </span>
@@ -168,7 +168,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
        <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton playButtonAdjustment">
+        <button class="playButton playButtonAdjustment" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -184,7 +184,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-      <button class="playButton playButtonAdjustment">
+      <button class="playButton playButtonAdjustment" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -206,7 +206,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton">
+        <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -220,7 +220,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-      <button class="playButton">
+      <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -233,7 +233,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton">
+        <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -246,7 +246,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-        <button class="playButton">
+        <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
 
@@ -272,7 +272,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-    <button class="playButton">
+    <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -286,7 +286,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -300,7 +300,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -314,7 +314,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -334,7 +334,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -348,7 +348,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -362,7 +362,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -376,7 +376,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -397,7 +397,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -411,7 +411,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -425,7 +425,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -439,7 +439,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -459,7 +459,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -473,7 +473,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -487,7 +487,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -501,7 +501,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -522,7 +522,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -536,7 +536,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -550,7 +550,7 @@ This page is under construction
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
         <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
- <button class="playButton">
+ <button class="playButton" (click)="video(data.snippet.resourceId.videoId)" >
             <span class="insidePlayButton"></span>
         </button>
   </span>
@@ -563,8 +563,8 @@ This page is under construction
     <span *ngIf="i>2 && i<4">
       <a href="javascript:void(0)" >
         <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-        <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)"  height="data.snippet.thumbnails.small.height"/></a>
-  <button class="playButton">
+        <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found"   height="data.snippet.thumbnails.small.height"/></a>
+  <button class="playButton" (click)="video(data.snippet.resourceId.videoId)">
             <span class="insidePlayButton"></span>
         </button>
     </span>
@@ -573,3 +573,4 @@ This page is under construction
     </div>
   </div>
 
+<app-pop-up-model></app-pop-up-model>
