--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,16 +23,18 @@
              <li><a routerLink="/home">HOME     </a></li>
               <li><a routerLink="/movies/nepaliMovie">NEPALI MOVIES</a></li>
               <li><a routerLink="/movies/hindiMovie">HINDI MOVIES</a></li>
-              <li><a routerLink="/news">VIDEO</a></li>
+              <!--<li><a routerLink="/news">VIDEO</a></li>-->
               <li><a routerLink="/contact">CONTACT US</a></li>
+              <li class="show-On-Mobile"><a href="#"><span class="glyphicon glyphicon-user "></span> Sign Up</a></li>
+              <li class="show-On-Mobile"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
-        <form class=" form-inline">
+        <form class=" form-inline" name="inputForm" (submit)="searchSubmit(inputField)">
           <ul class="nav navbar-nav navbar-right">
 
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" name="searchBox" [(ngModel)]="inputField" class="form-control" placeholder="Search">
                 <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
+                  <button class="btn btn-default"  [routerLink]="['/search', inputField]" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
                   </button>
                 </div>
@@ -46,23 +48,13 @@
       </nav>
     </div>
 </div>
+  <!--Show search box on mobile devices-->
 
+
+  <!-- Using Router-outlet to route -->
   <div>
-    <!--<div class="col-md-3 col-lg-3 hide_on_mobile">
-      <app-austinsidebar> </app-austinsidebar>
-    </div>-->
-    <div>
-
-
-
-      <router-outlet> </router-outlet>
-
-    </div>
-
-
-
-
-  </div>
+    <router-outlet> </router-outlet>
+</div>
 
 <div>
   <app-footer> </app-footer>
