--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<!--
 <div>
   <form class="form-group form-control-lg">
     <h3> Please fill out the below form to contact us</h3>
@@ -12,3 +13,8 @@
   </form>
 
 </div>
+-->
+<div style="min-height:400px">
+  This page is under construction...
+</div>
+
