--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,4 +3,12 @@
 }
 .panel-footer {
   background-color: black;
+  min-height: 50px;
+
+}
+.panel-footer span {
+  color:white;
+  float: right;
+  position: relative;
+  right:50%;
 }
