--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,144 +1,22 @@
-<!--
-
-
-
-
-<div>
-  <h2>Latest Release</h2>
-  <hr/>
-</div>
-
-<div>
-  <div class="row">
-    <div class="col-lg-6">
-      <span><h3>Bhadragoal</h3></span>
-      <div *ngFor="let data of bhadragoalData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-        <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-  </span>
-      </div>
-    </div>
-    <div class="col-lg-6">
-      <span><h3>Jire Khursani</h3></span>
-      <div *ngFor="let data of jireKhursaniData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-        <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-  </span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6">
-        <span><h3>Break Fail</h3></span>
-        <div *ngFor="let data of breakFailData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-       <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-  </span>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <span><h3>Meri Bassai</h3></span>
-        <div *ngFor="let data of meriBassaiData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-      <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-
-  </span>
-
-        </div>
-      </div>
-
-    </div>
-
-
-
-  </div>
-
-  <div class="row">
-    <div class="col-lg-6">
-      <span><h3>Hakka Haki</h3></span>
-      <div *ngFor="let data of hakkaHakkiData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-       <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-  </span>
-      </div>
-    </div>
-    <div class="col-lg-6">
-      <span><h3>Short Movie</h3></span>
-      <div *ngFor="let data of shortMovieData.items; let i=index">
-
-    <span *ngIf="i<3">
-      <a href="javascript:void(0)" >
-        <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-      <a href="javascript:void(0)" ><img [src]="data.snippet.thumbnails.medium.url" alt="Image not found" (click)="video(data.snippet.resourceId.videoId)" width="268" height="data.snippet.thumbnails.small.height"/></a>
-
-  </span>
-
-
-    </div>
-
-  </div>
-
-
-
-</div>
-
-</div>
-
-&lt;!&ndash; Pop up youtube model &ndash;&gt;
-<div *ngIf="showModel" id="myModal" class="modal">
-
-  &lt;!&ndash; Modal content &ndash;&gt;
-  <div class="modal-content">
-    <span (click)="close()" class="close" title="Close">&times;</span>
-
-    <iframe width="100%" height="100%" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </div>
-
-</div>
-
-
-
-
-
-
-
-This page is under construction
--->
-
-
 <div>
 <div class="row">
 
-  <div class="col-sm-3 teliserial"  title="Click Me for More Hakka Hakki" (click)="moreInfo()">
+  <div class="col-sm-3 teliserial"  title="Click Me for More Hakka Hakki">
     <hr>
-    <span><h3 [ngClass]="{'redClass':showRed}">Hakka Haki<span class="blink_me">**Latest** </span></h3></span>
+    <span><h3 [ngClass]="">Hakka Haki<span class="blink_me">**Latest** </span></h3></span>
     <hr>
       <div *ngFor="let data of hakkaHakkiData.items; let i=index">
     <span *ngIf="i<1">
+      <span>Date:{{data.snippet.publishedAt | json}}</span>
       <a href="javascript:void(0)">
       <span class="moviesTitle" (click)="video(data.snippet.resourceId.videoId)">{{data.snippet.title}}</span></a><br/>
-       <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found"  height="data.snippet.thumbnails.small.height"/></a>
+      <a href="javascript:void(0)" ><img  [src]="data.snippet.thumbnails.medium.url" alt="Image not found"  height="data.snippet.thumbnails.small.height"/></a>
         <button class="playButton playButtonAdjustment" (click)="video(data.snippet.resourceId.videoId)">
             <span class="insidePlayButton"></span>
         </button>
     </span>
 
     </div>
-
 
   </div>
   <div class="col-sm-3 teliserial">
@@ -157,6 +35,7 @@ This page is under construction
   </span>
 
     </div>
+
   </div>
   <div class="col-sm-3 ">
     <hr>
@@ -173,6 +52,7 @@ This page is under construction
         </button>
     </span>
   </div>
+
   </div>
   <div class="col-sm-3">
     <hr>
@@ -190,7 +70,9 @@ This page is under construction
     </span>
     </div>
   </div>
+
 </div>
+
 </div>
 <hr>
 
