--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,11 @@
 <div class="well-sm panel-footer">
-  Thank You
+
+  <div class="row">
+    <span>All right reserved</span>
+    <br>
+    <span>Follow us on :
+      <a href="#" target="_blank"><i class="fa fa-facebook-official" style="font-size:30px;color:white"></i></a>
+      <a href="#" target="_blank"><i class="fa fa-twitter" style="font-size:24px;color: white;"></i></a>
+      </span>
+  </div>
 </div>
