--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
   </div>
   <div class="col-sm-3">
     <hr>
-    <span><h3>Bhadragoal</h3></span>
+    <span ><h3 appPractice>Bhadragoal</h3></span>
     <hr>
     <div *ngFor="let data of bhadragoalData.items; let i=index">
 
